Fixes scrollbar for console text

--- a/ci/web/front/src/repository/repository.less
+++ b/ci/web/front/src/repository/repository.less
@@ -220,7 +220,7 @@
 				position: absolute;
 				top: 30px;
 				left: 10px;
-				right: 50px;
+				right: 15px;
 				bottom: 30px;
 				overflow-x: hidden;
 				overflow-y: auto;
@@ -228,7 +228,7 @@
 				.consoleText {
 					display: table;
 					table-layout: fixed;
-					width: 100%;
+					width: 95%;
 
 					.consoleTextLine {
 						display: table-row;
